force-app/main/default/objects/smagicinteract__forward_config__c/smagicinteract__forward_config__c.object-meta.xml
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <label>SMS Alert</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Forward Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>