force-app/main/default/objects/smagicinteract__forward_config__c/fields/smagicinteract__forwardToMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__forwardToMobilePhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forward SMS To User</label>
    <type>Checkbox</type>
</CustomField>