force-app/main/default/objects/smagicinteract__forward_config__c/fields/smagicinteract__forwardToUser__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__forwardToUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>forward_configs</relationshipName>
    <type>Lookup</type>
</CustomField>