force-app/main/default/objects/smagicinteract__forward_config__c/fields/smagicinteract__methodName__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__methodName__c</fullName>
    <label>Method Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Alert</fullName>
            </value>
            <value>
                <fullName>Mobile Forwarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>